--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sqlite": "^5.0.1",
+    "sqlite3": "^5.1.6"
   }
 }
