--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js localhost 5000"
+    "start": "nodemon ./index.js 0.0.0.0 5000",
+    "comentario": "se der erro muda nodemon pra node"
   },
   "keywords": [],
   "author": "Wendel Isaac",
